Updated Main CSS

--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,13 @@
 ul {
   font-size: 1em;
 }
+
+h2 {
+  font-family: "GT Walsheim Pro Bold", sans-serif;
+  font-style: normal;
+}
+
+h3 {
+  font-family: "GT Walsheim Pro Medium", sans-serif;
+  font-style: normal;
+}
